changed ProfessionalSituationType and GIAF scripts